--- a/fake_website/package.json
+++ b/fake_website/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.554.0",
+    "nodemailer": "^6.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
